reservation_backend/k8s/historique-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: historique-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: historique-service
  template:
    metadata:
      labels:
        app: historique-service
    spec:
      containers:
        - name: historique-service
          image: imenht/historique_service:latest
          ports:
            - containerPort: 3005
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
