reservation_backend/k8s/historique-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: historique-service
spec:
  selector:
    app: historique-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3005
  type: ClusterIP
