reservation_backend/k8s/salle-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: salle-service
spec:
  selector:
    app: salle-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3004
  type: ClusterIP
